# CBG

./: .qmake.stash  CMakeLists.txt  COPYING  Makefile  README.md  cryptobug-qt.pro
contrib/bitrpc/: bitrpc.py
contrib/debian/examples/: bitcoin.conf
contrib/debian/manpages/: bitcoin.conf.5
contrib/gitian-descriptors/: deps-win32.yml  gitian-win32.yml  gitian.yml
contrib/macdeploy/: fancy.plist
contrib/pyminer/: example-config.cfg  pyminer.py
contrib/wallettools/: walletchangepass.py  walletunlock.py
doc/: README  README_windows.txt  README~  assets-attribution.txt  build-msw.txt  build-osx.txt  build-unix.txt  coding.txt  readme-qt.rst  release-process.txt
foocoin-qt.app/Contents/: Info.plist
main.app/Contents/: Info.plist
share/: setup.nsi
src/: allocators.h  base58.h  base58.h~  bignum.h  bitcoinrpc.cpp  bitcoinrpc.cpp~  bitcoinrpc.h  checkpoints.cpp  checkpoints.cpp~  checkpoints.h  compat.h  crypter.cpp  crypter.h  db.cpp  db.h  init.cpp  init.cpp~  init.h  irc.cpp  irc.cpp~  irc.h  key.cpp  key.h  keystore.cpp  keystore.h  main.cpp  main.cpp~  main.h  main.h~  mruset.h  net.cpp  net.cpp~  net.h  netbase.cpp  netbase.h  noui.cpp  protocol.cpp  protocol.h  protocol.h~  rpcdump.cpp  (+18 more)
src/qt/: bitcoingui.cpp  bitcoingui.cpp~  clientmodel.cpp
src/qt/forms/: aboutdialog.ui  aboutdialog.ui~  signverifymessagedialog.ui
src/qt/locale/: bitcoin_bg.ts  bitcoin_ca_ES.ts  bitcoin_cs.ts  bitcoin_da.ts  bitcoin_de.ts  bitcoin_el_GR.ts  bitcoin_en.ts  bitcoin_es.ts  bitcoin_es_CL.ts  bitcoin_et.ts  bitcoin_eu_ES.ts  (+24 more)
src/test/: netbase_tests.cpp
